Fix issue with horizontal overflow, Fix projects carousel

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,10 @@ html {
 section {
   background-color: rgba(255, 255, 255, 0); /* Adjust the opacity as needed */
 }
+
+.slick-list {
+  margin: 0 -10px;
+}
+.slick-slide > div {
+  padding: 0 10px;
+}
